@@ -49,6 +49,54 @@ begin_import
 import|import
 name|java
 operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|InvocationHandler
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|InvocationTargetException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|Method
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|lang
+operator|.
+name|reflect
+operator|.
+name|Proxy
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|net
 operator|.
 name|URI
@@ -3746,6 +3794,134 @@ argument_list|,
 name|deleteData
 argument_list|)
 return|;
+block|}
+comment|/**    * Creates a synchronized wrapper for any {@link IMetaStoreClient}.    * This may be used by multi-threaded applications until we have    * fixed all reentrancy bugs.    *    * @param client unsynchronized client    *    * @return synchronized client    */
+specifier|public
+specifier|static
+name|IMetaStoreClient
+name|newSynchronizedClient
+parameter_list|(
+name|IMetaStoreClient
+name|client
+parameter_list|)
+block|{
+return|return
+operator|(
+name|IMetaStoreClient
+operator|)
+name|Proxy
+operator|.
+name|newProxyInstance
+argument_list|(
+name|HiveMetaStoreClient
+operator|.
+name|class
+operator|.
+name|getClassLoader
+argument_list|()
+argument_list|,
+operator|new
+name|Class
+index|[]
+block|{
+name|IMetaStoreClient
+operator|.
+name|class
+block|}
+argument_list|,
+operator|new
+name|SynchronizedHandler
+argument_list|(
+name|client
+argument_list|)
+argument_list|)
+return|;
+block|}
+specifier|private
+specifier|static
+class|class
+name|SynchronizedHandler
+implements|implements
+name|InvocationHandler
+block|{
+specifier|private
+specifier|final
+name|IMetaStoreClient
+name|client
+decl_stmt|;
+specifier|private
+specifier|static
+specifier|final
+name|Object
+name|lock
+init|=
+name|SynchronizedHandler
+operator|.
+name|class
+decl_stmt|;
+name|SynchronizedHandler
+parameter_list|(
+name|IMetaStoreClient
+name|client
+parameter_list|)
+block|{
+name|this
+operator|.
+name|client
+operator|=
+name|client
+expr_stmt|;
+block|}
+specifier|public
+name|Object
+name|invoke
+parameter_list|(
+name|Object
+name|proxy
+parameter_list|,
+name|Method
+name|method
+parameter_list|,
+name|Object
+index|[]
+name|args
+parameter_list|)
+throws|throws
+name|Throwable
+block|{
+try|try
+block|{
+synchronized|synchronized
+init|(
+name|lock
+init|)
+block|{
+return|return
+name|method
+operator|.
+name|invoke
+argument_list|(
+name|client
+argument_list|,
+name|args
+argument_list|)
+return|;
+block|}
+block|}
+catch|catch
+parameter_list|(
+name|InvocationTargetException
+name|e
+parameter_list|)
+block|{
+throw|throw
+name|e
+operator|.
+name|getTargetException
+argument_list|()
+throw|;
+block|}
+block|}
 block|}
 block|}
 end_class
