@@ -7493,6 +7493,46 @@ name|part
 argument_list|)
 expr_stmt|;
 block|}
+comment|/**    * Tests {@link HiveMetaStoreClient#newSynchronizedClient}.  Does not    * actually test multithreading, but does verify that the proxy    * at least works correctly.    */
+specifier|public
+name|void
+name|testSynchronized
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|IMetaStoreClient
+name|synchronizedClient
+init|=
+name|HiveMetaStoreClient
+operator|.
+name|newSynchronizedClient
+argument_list|(
+name|client
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|String
+argument_list|>
+name|databases
+init|=
+name|synchronizedClient
+operator|.
+name|getAllDatabases
+argument_list|()
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|databases
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
 block|}
 end_class
 
